--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,58 @@ header,
 footer {
   font-size: 1.5rem;
 }
+
+nav ul {
+  font-family: sans-serif;
+}
+
+a:not(.no-highlight) {
+  background-color: #719e07;
+}
+
+a[rel="external"] {
+  background-color: #2694d8;
+}
+
+ol li:first-child {
+  color: #719e47;
+}
+
+ol li:last-child {
+  color: #2aa198;
+}
+
+.types li:nth-child(odd) {
+  background-color: #657ba3;
+}
+
+.types li:nth-child(even) {
+  background-color: #586e75;
+}
+
+.types li:nth-child(3) {
+  background-color: #d04b16;
+}
+
+.logo {
+  text-transform: uppercase;
+}
+
+.wrapper {
+  background-color: #eee8d5;
+}
+
+.wrapper > .dfn {
+  background-color: #b58900;
+}
+
+div[class="dfn"] > p:first-child strong:nth-of-type(2) {
+  color: #fff;
+}
+
+#contents,
+#favs,
+#facts,
+#types {
+  color: #93a1a1;
+}
