--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ ol li:last-child {
   background-color: #586e75;
 }
 
-.types li:nth-child(3) {
+.types li:nth-child(3n) {
   background-color: #d04b16;
 }
 
