--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ ol li:last-child {
   background-color: #b58900;
 }
 
-div[class="dfn"] > p:first-child strong:nth-child(2) {
+.dfn p > strong + strong {
   color: #fff;
 }
 
